fix: Labels are too generic and should be changed to avoid collisions