@@ -9,16 +9,20 @@ import static io.stackgres.common.resource.ResourceUtil.labelValue;
 
 import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
 import io.fabric8.kubernetes.client.CustomResource;
 
 public abstract class AbstractLabelFactory<T extends CustomResource<?, ?>>
     implements LabelFactory<T> {
 
   @Override
+  public Map<String, String> appLabel() {
+    return Map.of(labelMapper().appKey(), labelMapper().appName());
+  }
+
+  @Override
   public Map<String, String> genericLabels(T resource) {
-    return ImmutableMap.of(labelMapper().appKey(), labelMapper().appName(),
-        labelMapper().resourceNameKey(), labelValue(resourceName(resource)));
+    return Map.of(labelMapper().appKey(), labelMapper().appName(),
+        labelMapper().resourceNameKey(resource), labelValue(resourceName(resource)));
   }
 
 }
